src/app/chat/component/new-message-window/new-message-window.component.scss
@import 'src/app/chat/chat-styles-reset';

:host {
  width: 100%;
  height: 100%;
}

.message-window {
  width: 250px;
  position: fixed;
  bottom: 0;
  right: 330px;
  z-index: 100;

  .chat {
    width: 100%;
    height: 200px;
    flex: 1;
    overflow-y: scroll;
  }
}

@media (max-width: 576px) {
  :host {
    right: 4px;
    bottom: 121px;
  }
}

.new-message-window {
  box-sizing: border-box;
  box-shadow: 0 0 2px 1px rgb(0 0 0 / 25%);
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  background: var(--primary-white);
  z-index: 100;
}

.new-msg-title {
  @include flex(row, space-between, center);

  padding: 0 10px;
  background: var(--quaternary-dark-grey);
  border: var(--primary-white) solid 0.5px;
  border-top-right-radius: 7px;
  border-top-left-radius: 7px;
}

.msg-title {
  font-size: 12px;
  font-family: var(--primary-font);
  color: var(--primary-white);
}

.close-new-msg {
  font-size: 25px;
  cursor: pointer;
  color: var(--primary-white);
}

.chat-name {
  font-size: 14px;
  font-family: var(--primary-font);
  color: var(--primary-white);
}

.receiver {
  @include flex(row, space-between, center);

  width: 100%;
  height: 45px;
  position: relative;
  padding: 0 10px;
  border-left: var(--primary-white) solid 0.5px;
  border-right: var(--primary-white) solid 0.5px;
  background: var(--quaternary-dark-grey);

  .account {
    @include flex(row, center, center);

    color: var(--primary-white);
    font-family: var(--primary-font);

    .chat-name {
      padding-left: 10px;
    }
  }
}

.chat-days-separate-line {
  margin: 15px 0;
  width: 100%;
  border-radius: 10px;
  position: relative;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;

  span {
    color: #878787;
    font-size: 16px;
  }

  &::after,
  &::before {
    content: '';
    width: 25%;
    height: 1px;
    border-radius: 1px;
    display: block;
    position: absolute;
    background: #bebebe;
    top: 50%;
    transform: translateY(-50%);
  }

  &::before {
    left: 0;
  }

  &::after {
    right: 0;
  }
}

.join-chat {
  @include flex(row, center, center);

  width: 100%;
  height: 40px;
  background: var(--quaternary-dark-grey);

  button {
    background: var(--primary-white);
  }
}

.attached-file {
  position: relative;

  & > img {
    width: 20px;
  }

  button {
    width: 12px;
    position: absolute;
    right: 2px;
  }

  p {
    font-size: 12px;
  }
}

.message-sender {
  @include flex(row, space-between, center);

  padding: 10px;
  background: var(--quaternary-dark-grey);

  img {
    height: 20px;
  }

  button {
    cursor: pointer;
    border-radius: 50%;
    padding: 5px;
    box-sizing: content-box;

    @include flex(row, center, center);

    &:hover {
      background: var(--quaternary-grey);
    }

    &:disabled:hover {
      cursor: unset;
      background: var(--quaternary-dark-grey);
    }
  }

  input {
    width: 100%;
    border: none;
    font-size: 15px;
    margin: 0 10px;
    background: var(--quaternary-dark-grey);
    color: var(--primary-white);

    &:focus {
      outline: 0;
    }
  }
}

.message-container {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.message {
  @include flex(row, flex-start, flex-end);

  column-gap: 5px;
  padding: 10px 0;
  width: 100%;

  & > img {
    height: 25px;
  }

  &.own {
    justify-content: flex-end;

    & > .logo {
      display: none;
    }
  }
}

.uploaded-image {
  height: 46px;
  margin-right: 35px;
  border-radius: 8px;
}

.msg-block {
  @include flex(row, flex-start, center);

  max-width: 100%;
  padding: 8px;
  border-radius: 10px 10px 10px 0;
  position: relative;
  box-shadow: 0 0 1px 1px rgb(0 0 0 / 25%);
  background: var(--primary-green);
  overflow: hidden;

  span {
    font-size: 14px;
    font-family: var(--primary-font);
    color: #fff;
    overflow-wrap: break-word;
  }
}

.msg-content {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  max-width: 60%;

  // img {
  //   width: 40px;
  //   margin-top: 10px;
  // }
}

.message.own .msg-block {
  justify-content: flex-end;
  border-radius: 10px 10px 0 10px;
  background: var(--quaternary-dark-grey);
}

.msg-time {
  font-size: 12px;
  text-overflow: clip;
}

.emoji-mart {
  position: absolute;
  bottom: 0;
  right: 250px;
  box-sizing: border-box;
}

::ng-deep .emoji-mart-scroll {
  height: 150px;
}

.sender-additional-buttons {
  @include flex(row, space-between, center);

  column-gap: 10px;
}

.button-icon {
  align-self: center;

  img {
    width: 14px;
    height: 14px;
  }
}

.editing {
  background-color: var(--ubs-liberty-green);
}

.message-hint {
  position: relative;
  padding: 2px;
  border: 1px solid grey;
  font-size: 11px;
  font-style: italic;
  overflow: hidden;

  .message-content {
    max-height: 35px;
    max-width: 90%;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .cancel-editing {
    position: absolute;
    top: -2px;
    right: 0;
  }

  img {
    width: 8px;
    height: 8px;
  }
}

.file-upload label:hover {
  cursor: pointer;
}

.file-upload input[type='file'] {
  display: none;
}

.current-chat {
  .new-msg-title,
  .receiver {
    display: none;
  }

  .chat {
    width: 100%;
    height: 472px;
    overflow-y: scroll;
  }
}

